@@ -67,7 +67,7 @@
                     <aligny>center</aligny>
                     <align>center</align>
                     <shadowcolor>black</shadowcolor>
-                    <textcolor>FF12B2E7</textcolor>
+                    <textcolor>$VAR[SkinColorVar]</textcolor>
                     <label fallback="--">$INFO[ListItem.Label]</label>
                     <visible>Control.HasFocus(110)</visible>
                 </control>
@@ -121,7 +121,7 @@
                     <align>center</align>
                     <aligny>center</aligny>
                     <label>$INFO[ListItem.Label]</label>
-                    <textcolor>FF12B2E7</textcolor>
+                    <textcolor>$VAR[SkinColorVar]</textcolor>
                 </control>
             </focusedlayout>
         </control>
