@@ -1,4 +1,5 @@
 [B]2.0.3[/B]
+• Fix color with lyrics
 • Fix esthetic appearance
 
 [B]2.0.2[/B]
